[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/Options/ScreenSettings/ScreenSettings.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/ButtonSFX.gd" type="Script" id=2]

[node name="ScreenSettings" type="Control" groups=[
"save",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="V"]
margin_top = 91.0
margin_right = 1024.0
margin_bottom = 105.0
size_flags_vertical = 6
text = "Screen Settings"
align = 1
valign = 1

[node name="V" type="VBoxContainer" parent="V"]
margin_top = 201.0
margin_right = 1024.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="H" type="HBoxContainer" parent="V/V"]
margin_right = 1024.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="V/V/H"]
margin_left = 221.0
margin_top = 1.0
margin_right = 289.0
margin_bottom = 15.0
size_flags_horizontal = 6
text = "Brightness"

[node name="Brightness" type="HSlider" parent="V/V/H"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="H2" type="HBoxContainer" parent="V/V"]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="V/V/H2"]
margin_left = 228.0
margin_top = 1.0
margin_right = 281.0
margin_bottom = 15.0
size_flags_horizontal = 6
text = "Contrast"

[node name="Contrast" type="HSlider" parent="V/V/H2"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="H3" type="HBoxContainer" parent="V/V"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="V/V/H3"]
margin_left = 223.0
margin_top = 1.0
margin_right = 287.0
margin_bottom = 15.0
size_flags_horizontal = 6
text = "Saturation"

[node name="Saturation" type="HSlider" parent="V/V/H3"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="Reset" type="Button" parent="V/V"]
margin_left = 488.0
margin_top = 127.0
margin_right = 536.0
margin_bottom = 147.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Reset"
script = ExtResource( 2 )

[node name="Button" type="Button" parent="V"]
margin_left = 480.0
margin_top = 491.0
margin_right = 543.0
margin_bottom = 511.0
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Options"
script = ExtResource( 2 )

[connection signal="value_changed" from="V/V/H/Brightness" to="." method="_on_Brightness_value_changed"]
[connection signal="value_changed" from="V/V/H2/Contrast" to="." method="_on_Contrast_value_changed"]
[connection signal="value_changed" from="V/V/H3/Saturation" to="." method="_on_Saturation_value_changed"]
[connection signal="pressed" from="V/V/Reset" to="." method="_on_Reset_pressed"]
